Fix pagination align

--- a/client/source/main.css
+++ b/client/source/main.css
@@ -756,6 +756,7 @@ a:hover {
 }
 #pagination {
   float: right;
+  width: 100%;
 }
 #pagination label {
   vertical-align: middle;
